Creation of section destinations

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <main>
 
+        <!-- HERO inicio-->
         <section class="hero">
             <div class="hero__content">
                 <h1 class="hero__title">Explore and Travel</h1>
@@ -81,12 +82,89 @@
             </div>
         </section>
 
+        <!-- HERO fim -->
+
+        <!-- INFO inicio -->
+
+        <section class="info">
+
+            <div class="info__img-container">
+                <img src="./images/info-img.png" class="info__img">
+            </div>
+
+            <div class="info__content">
+                <h2 class="info__title">A new way to explore the world </h2>
+                <h3 class="info__text">For decades travellers have reached for Lonely Planet 
+                    books when looking to plan and execute their perfect 
+                    trip, but now, they can also let Lonely Planet Experiences lead the way</h3>
+                <a class="info__button">Learn more</a>
+            </div>
+
+        </section>
+
+        <!-- INFO fim -->
+
+        <!-- DESTINATIONS inicio -->
+
+        <section class="destinations">
+
+            <div class="destinations__intro">
+                <h2 class="destinations__title">Featured destinations</h2>
+                <a href="#" class="destinations__view-all">View all ></a>
+            </div>
+
+            <div class="destinations__cards">
+
+                <div class="destinations__card">
+                    <img src="./images/destinations__img1.png" class="destinations__img">
+                    <div class="destinations__id">
+                        <p class="destinations__id-title">Raja Ampat</p>
+                        <p class="destinations__id-subtitle">Indonesia</p>
+                    </div>
+                </div>
+
+                <div class="destinations__card">
+                    <img src="./images/destinations__im2.png" class="destinations__img">
+                    <div class="destinations__id">
+                        <p class="destinations__id-title">Fanjingshan</p>
+                        <p class="destinations__id-subtitle">China</p>
+                    </div>
+                </div>
+
+                <div class="destinations__card">
+                    <img src="./images/destinations__im3.png" class="destinations__img">
+                    <div class="destinations__id">
+                        <p class="destinations__id-title">Vevey</p>
+                        <p class="destinations__id-subtitle">Switzerland</p>
+                    </div>
+                </div>
+
+                <div class="destinations__card">
+                    <img src="./images/destinations__im4.png" class="destinations__img">
+                    <div class="destinations__id">
+                        <p class="destinations__id-title">Skadar</p>
+                        <p class="destinations__id-subtitle">Montenegro</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- DESTINATIONS fim -->
+
+        <!-- ELEMENTS inicio -->
+
         <div class="hero__elements">
             <img src="./images/cruz-amarela-img.png" class="hero__element1">
             <img src="./images/circulo-verde-img.png" class="hero__element2">
             <img src="./images/circulo-verde-img.png" class="hero__element3">
-            <img src="./images/cruz-amarela-img.png" class="hero__element4">
+            <img src="./images/cruz-amarela-img.png" class="info__element1">
+            <img src="./images/circulo-verde-img.png" class="info__element2">
+            <img src="./images/circulo-verde-img.png" class="destinations__element1">
+            <img src="./images/circulo-verde-img.png" class="destinations__element2">
         </div>
+
+        <!-- ELEMENTS fim -->
 
     </main>
 
