creation of sections info 2 and testimonials

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </select>
                 </form>
 
-                <a  href="#" class="hero__button">Explore</a>
+                <a  href="#" class="hero__button" class="hero__button">Explore</a>
             </div>
 
             <div class="hero__img-container">
@@ -94,10 +94,10 @@
 
             <div class="info__content">
                 <h2 class="info__title">A new way to explore the world </h2>
-                <h3 class="info__text">For decades travellers have reached for Lonely Planet 
+                <p class="info__text">For decades travellers have reached for Lonely Planet 
                     books when looking to plan and execute their perfect 
-                    trip, but now, they can also let Lonely Planet Experiences lead the way</h3>
-                <a class="info__button">Learn more</a>
+                    trip, but now, they can also let Lonely Planet Experiences lead the way</p>
+                <a href="#" class="info__button">Learn more</a>
             </div>
 
         </section>
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="destinations__card">
-                    <img src="./images/destinations__im3.png" class="destinations__img">
+                   <a href></a><img src="./images/destinations__im3.png" class="destinations__img">
                     <div class="destinations__id">
                         <p class="destinations__id-title">Vevey</p>
                         <p class="destinations__id-subtitle">Switzerland</p>
@@ -152,6 +152,48 @@
 
         <!-- DESTINATIONS fim -->
 
+        <!-- INFO 2 inicio -->
+
+        <section class="info2">
+            <div class="info2__content">
+                <h2 class="info2__title">Guides by Thousand Sunny</h2>
+                <p class="info2__text">Packed with tips and advice from our on-the-ground experts, our city guides app 
+                (iOS and Android) is the ultimate resource before and during a trip.</p>
+                <a href="#" class="info2__button">Download</a>
+            </div>
+
+            <div class="info2__img-container">
+                <img  src="./images/info2-img.png" class="info2__img">
+            </div>
+        </section>
+
+        <!-- INFO 2 FIM -->
+
+         <!-- TESTIMONIAL inicio -->
+
+         <section class="testimonial">
+            <div class="testimonial__content">
+                <h3 class="testimonial__title">Testimonial</h3>
+                <div class="testimonial__score">
+                    <img src="./images/testimonial__star-img.png" class="testimonial__score-img">
+                    <img src="./images/testimonial__star-img.png" class="testimonial__score-img">
+                    <img src="./images/testimonial__star-img.png" class="testimonial__score-img">
+                    <img src="./images/testimonial__star-img.png" class="testimonial__score-img">
+                    <img src="./images/testimonial__star-img.png" class="testimonial__score-img">
+                </div>
+                <p class="testimonial__text">“Quisque in lacus a urna fermentum euismod. 
+                Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”</p>
+                <p class="testimonial__author">Edward Newgate</p>
+                <p class="testimonial__author-job">Founder Circle</p>
+            </div>
+
+            <div class="testimonial__container-img">
+                <img src="./images/testimonial__img.png" class="testimonial__img">
+            </div>
+         </section>
+
+         <!-- TESTIMONIAL fim -->
+
         <!-- ELEMENTS inicio -->
 
         <div class="hero__elements">
@@ -162,9 +204,14 @@
             <img src="./images/circulo-verde-img.png" class="info__element2">
             <img src="./images/circulo-verde-img.png" class="destinations__element1">
             <img src="./images/circulo-verde-img.png" class="destinations__element2">
+            <img src="./images/circulo-verde-img.png" class="info2__element1">
+            <img src="./images/cruz-amarela-img.png" class="info2__element2">
+            <img src="./images/cruz-amarela-img.png" class="info2__element3">
         </div>
 
         <!-- ELEMENTS fim -->
+
+        
 
     </main>
 
