Creation of section stories

--- a/index.html
+++ b/index.html
@@ -194,6 +194,64 @@
 
          <!-- TESTIMONIAL fim -->
 
+
+         <section class="stories">
+
+            <div class="stories__intro">
+                <h2 class="stories__title">Featured destinations</h2>
+                <a href="#" class="stories__view-all">View all ></a>
+            </div>
+
+            <div class="stories__cards">
+                <div class="stories__card">
+                    <img src="./images/stories__img1.png" class="stories__img">
+                    <div class="stories__id">
+                        <p class="stories__id-title">The many benefits of  
+                            taking a healing holiday</p>
+                        <p class="stories__id-text">‘Helaing holidays’ are on the rise 
+                            tohelp maximise your health and happines...</p>
+                        <a class="stories__link">Read more</a>
+                    </div>
+                </div>
+
+                <div class="stories__card">
+                    <img src="./images/stories__img2.png" class="stories__img">
+                    <div class="stories__id">
+                        <p class="stories__id-title">The best Kyoto restaurant
+                            to try Japanese food</p>
+                        <p class="stories__id-text">From tofu to teahouses, here’s our guide to Kyoto’s best restaurants
+                            to visit...</p>
+                        <a class="stories__link">Read more</a>
+                    </div>
+                </div>
+
+                <div class="stories__card">
+                    <img src="./images/stories__img3.png" class="stories__img">
+                    <div class="stories__id">
+                        <p class="stories__id-title">Skip Chichen Itza and head
+                            to this remote Yucatan</p>
+                        <p class="stories__id-text">It’s remote and challenging to get,
+                            but braving the jungle and exploring
+                            these ruins without the...</p>
+                        <a class="stories__link">Read more</a>
+                    </div>
+                </div>
+
+                <div class="stories__card">
+                    <img src="./images/stories__img4.png" class="stories__img">
+                    <div class="stories__id">
+                        <p class="stories__id-title">Surf’s up at these beginner
+                            spots around the world</p>
+                        <p class="stories__id-text">If learning to surf has in on your to-
+                            do list for a while, the good news
+                            is: it’s never too late...</p>
+                        <a class="stories__link">Read more</a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- ELEMENTS inicio -->
 
         <div class="hero__elements">
@@ -207,6 +265,9 @@
             <img src="./images/circulo-verde-img.png" class="info2__element1">
             <img src="./images/cruz-amarela-img.png" class="info2__element2">
             <img src="./images/cruz-amarela-img.png" class="info2__element3">
+            <img src="./images/circulo-verde-img.png" class="testimonials__element1">
+            <img src="./images/cruz-amarela-img.png" class="testimonials__element2">
+            <img src="./images/circulo-verde-img.png" class="testimonials__element3">
         </div>
 
         <!-- ELEMENTS fim -->
