section stories corretions and footer creation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="header__content">
 
-            <div class="header__images">
+            <div class="logo">
                 <img src="./images/logo-verde.png" class="header__images-logo-verde">
                 <img src="./images/logo-laranja.png" class="header__images-logo-laranja">
             </div>
@@ -80,6 +80,12 @@
             <div class="hero__img-container">
                 <img src="./images/hero-img.png">
             </div>
+
+            <div class="hero__elements">
+                <img src="./images/cruz-amarela-img.png" class="hero__element1">
+                <img src="./images/circulo-verde-img.png" class="hero__element2">
+                <img src="./images/circulo-verde-img.png" class="hero__element3">
+            </div>
         </section>
 
         <!-- HERO fim -->
@@ -98,6 +104,11 @@
                     books when looking to plan and execute their perfect 
                     trip, but now, they can also let Lonely Planet Experiences lead the way</p>
                 <a href="#" class="info__button">Learn more</a>
+            </div>
+
+            <div class="info__elements">
+                <img src="./images/cruz-amarela-img.png" class="info__element1">
+                <img src="./images/circulo-verde-img.png" class="info__element2">
             </div>
 
         </section>
@@ -148,6 +159,12 @@
                 </div>
 
             </div>
+
+            <div class="destinations__elements">
+                <img src="./images/cruz-amarela-img.png" class="destinations__element1">
+                <img src="./images/circulo-verde-img.png" class="destinations__element2">
+                <img src="./images/circulo-verde-img.png" class="destinations__element3">
+            </div>
         </section>
 
         <!-- DESTINATIONS fim -->
@@ -165,11 +182,17 @@
             <div class="info2__img-container">
                 <img  src="./images/info2-img.png" class="info2__img">
             </div>
+
+            <div class="info2__elements">
+                <img src="./images/circulo-verde-img.png" class="info2__element1">
+                <img src="./images/cruz-amarela-img.png" class="info2__element2">
+                <img src="./images/cruz-amarela-img.png" class="info2__element3">
+            </div>
         </section>
 
         <!-- INFO 2 FIM -->
 
-         <!-- TESTIMONIAL inicio -->
+        <!-- TESTIMONIAL inicio -->
 
          <section class="testimonial">
             <div class="testimonial__content">
@@ -190,15 +213,23 @@
             <div class="testimonial__container-img">
                 <img src="./images/testimonial__img.png" class="testimonial__img">
             </div>
+
+            <div class="testimonial__elements">
+                <img src="./images/circulo-verde-img.png" class="testimonials__element1">
+                <img src="./images/cruz-amarela-img.png" class="testimonials__element2">
+                <img src="./images/circulo-verde-img.png" class="testimonials__element3">
+            </div>
          </section>
 
-         <!-- TESTIMONIAL fim -->
+        <!-- TESTIMONIAL fim -->
+
+        <!-- STORIES inicio -->
 
 
          <section class="stories">
 
             <div class="stories__intro">
-                <h2 class="stories__title">Featured destinations</h2>
+                <h2 class="stories__title">Trending stories</h2>
                 <a href="#" class="stories__view-all">View all ></a>
             </div>
 
@@ -208,7 +239,7 @@
                     <div class="stories__id">
                         <p class="stories__id-title">The many benefits of  
                             taking a healing holiday</p>
-                        <p class="stories__id-text">‘Helaing holidays’ are on the rise 
+                        <p class="stories__id-text">Helaing holidays are on the rise 
                             tohelp maximise your health and happines...</p>
                         <a class="stories__link">Read more</a>
                     </div>
@@ -219,7 +250,7 @@
                     <div class="stories__id">
                         <p class="stories__id-title">The best Kyoto restaurant
                             to try Japanese food</p>
-                        <p class="stories__id-text">From tofu to teahouses, here’s our guide to Kyoto’s best restaurants
+                        <p class="stories__id-text">From tofu to teahouses, heres our guide to Kyotos best restaurants
                             to visit...</p>
                         <a class="stories__link">Read more</a>
                     </div>
@@ -230,7 +261,7 @@
                     <div class="stories__id">
                         <p class="stories__id-title">Skip Chichen Itza and head
                             to this remote Yucatan</p>
-                        <p class="stories__id-text">It’s remote and challenging to get,
+                        <p class="stories__id-text">Its remote and challenging to get,
                             but braving the jungle and exploring
                             these ruins without the...</p>
                         <a class="stories__link">Read more</a>
@@ -240,43 +271,84 @@
                 <div class="stories__card">
                     <img src="./images/stories__img4.png" class="stories__img">
                     <div class="stories__id">
-                        <p class="stories__id-title">Surf’s up at these beginner
+                        <p class="stories__id-title">Surfs up at these beginner
                             spots around the world</p>
                         <p class="stories__id-text">If learning to surf has in on your to-
                             do list for a while, the good news
-                            is: it’s never too late...</p>
+                            is: its never too late...</p>
                         <a class="stories__link">Read more</a>
                     </div>
                 </div>
             </div>
 
+            <div class="stories__elements">
+                <img src="./images/circulo-verde-img.png" class="stories__element1">
+                <img src="./images/cruz-amarela-img.png" class="stories__element2">
+                <img src="./images/circulo-verde-img.png" class="stories__element3">
+            </div>
+
         </section>
 
-        <!-- ELEMENTS inicio -->
-
-        <div class="hero__elements">
-            <img src="./images/cruz-amarela-img.png" class="hero__element1">
-            <img src="./images/circulo-verde-img.png" class="hero__element2">
-            <img src="./images/circulo-verde-img.png" class="hero__element3">
-            <img src="./images/cruz-amarela-img.png" class="info__element1">
-            <img src="./images/circulo-verde-img.png" class="info__element2">
-            <img src="./images/circulo-verde-img.png" class="destinations__element1">
-            <img src="./images/circulo-verde-img.png" class="destinations__element2">
-            <img src="./images/circulo-verde-img.png" class="info2__element1">
-            <img src="./images/cruz-amarela-img.png" class="info2__element2">
-            <img src="./images/cruz-amarela-img.png" class="info2__element3">
-            <img src="./images/circulo-verde-img.png" class="testimonials__element1">
-            <img src="./images/cruz-amarela-img.png" class="testimonials__element2">
-            <img src="./images/circulo-verde-img.png" class="testimonials__element3">
-        </div>
-
-        <!-- ELEMENTS fim -->
-
-        
-
+        <!-- STORIES fim -->
     </main>
 
-    
+    <footer>
+        <div class="footer__content">
+            <div class="footer__content-info">
+                <div class="about">
+                    <div class="logo">
+                        <img src="./images/logo-verde.png" class="header__images-logo-verde">
+                        <img src="./images/logo-laranja.png" class="header__images-logo-laranja">
+                    </div>
 
+                    <p class="about__text">Plan and book your perfect trip with 
+                        expert advice, travel tips destination
+                        information from us</p>
+
+                    <p class="about__rights">©2022 Thousand Sunny. All rights reserved</p>
+                </div>
+
+                <div class="about-links">
+                    <div class="continents">
+                        <h4 class="about-title">Destinations</h4>
+                        <a href="#" class="about-item">Africa</a>
+                        <a href="#" class="about-item">Antartica</a>
+                        <a href="#" class="about-item">Asia</a>
+                        <a href="#" class="about-item">Europe</a>
+                        <a href="#" class="about-item">America</a>
+                    </div>
+
+                    <div class="shop">
+                        <h4 class="about-title">Shop</h4>
+                        <a href="#" class="about-item">Destinations Guides</a>
+                        <a href="#" class="about-item">Pictorial & Gifts</a>
+                        <a href="#" class="about-item">Especial Offers</a>
+                        <a href="#" class="about-item">Delivery Times</a>
+                        <a href="#" class="about-item">FAQs</a>
+                    </div>
+
+                    <div class="interests">
+                        <h4 class="about-title">Interests</h4>
+                        <a href="#" class="about-item">Adventure Travel</a>
+                        <a href="#" class="about-item">Art And Culture</a>
+                        <a href="#" class="about-item">Wildlife And Nature</a>
+                        <a href="#" class="about-item">Family Holidays</a>
+                        <a href="#" class="about-item">Food And Drink</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__content-social">
+                <div class="footer__imgs">
+                    <a href="#"><img src="./images/footer-img1.png" class="footer__img"></a>
+                    <a href="#"><img src="./images/footer-img2.png" class="footer__img"></a>
+                    <a href="#"><img src="./images/footer-img3.png" class="footer__img"></a>
+                    <a href="#"><img src="./images/footer-img4.png" class="footer__img"></a>
+                    <a href="#"><img src="./images/footer-img5.png" class="footer__img"></a>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
